--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
   <img src="<iframe src="https://giphy.com/embed/kL1KAdQYmKXle" width="480" height="360" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-  <p><a href="https://giphy.com/gifs/kL1KAdQYmKXle">via GIPHY</a></p>
+  <p><a href="https://giphy.com/gifs/kL1KAdQYmKXle">Dancing Chocolate</a></p>
 </body>
 
 </html>
