--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <h1>Baby Sophia n Baby Jabari</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-  <iframe src="https://giphy.com/embed/kL1KAdQYmKXle" width="480" height="360" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-  <p><a href="https://giphy.com/gifs/kL1KAdQYmKXle">Dancing Chocolate</a></p>
+  <!--<iframe src="https://giphy.com/embed/kL1KAdQYmKXle" width="480" height="360" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+  <p><a href="https://giphy.com/gifs/kL1KAdQYmKXle">Dancing Chocolate</a></p>-->
   <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2E3b3B2NDdwZmZhaHR5b200aGFzMmhyMmdpeGV1NXg3ZTVmYWV0cCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/kL1KAdQYmKXle/giphy.gif"/>
 </body>
 
