--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>Baby Sophia n Baby Jabari</h1>
+  <h1>Coding</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
   <!--<iframe src="https://giphy.com/embed/kL1KAdQYmKXle" width="480" height="360" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
